@@ -11,14 +11,6 @@
 #define CLSID_TaskbarList {0x56FDF344, 0xFD6D, 0x11d0, {0x95, 0x8A, 0x00, 0x60, 0x97, 0xC9, 0xA0, 0x90}}
 #define IID_ITaskbarList3 {0xEA1AFB91, 0x9E28, 0x4B86, {0x90, 0xE9, 0x9E, 0x9F, 0x8A, 0x5E, 0xEF, 0xAF}}
 
-typedef enum {
-    TBPF_NOPROGRESS	= 0,
-    TBPF_INDETERMINATE	= 0x1,
-    TBPF_NORMAL	= 0x2,
-    TBPF_ERROR	= 0x4,
-    TBPF_PAUSED	= 0x8
-} TBPFLAG;
-
 #define LPTHUMBBUTTON LPVOID
 
 /* interface definition */
